# sparkly

./: .fork-commit-sha  CNAME  FORK_NOTES.md  LICENSE  README.md  pyproject.toml  requirements.txt
doc/: install-cluster-machines.md  install-java-jcc-pylucene.md  install-single-machine-linux.md  install-single-machine-macOS.md  install-single-machine-windowsOS.md
doc/api/: conf.py  modules.rst
doc/api/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sparkly.html  sparkly.index.html  sparkly.index_optimizer.html  sparkly.query_generator.html
doc/api/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  sparkly.doctree  sparkly.index.doctree  sparkly.index_optimizer.doctree  sparkly.query_generator.doctree
doc/api/_build/html/_sources/: index.rst.txt  sparkly.index.rst.txt
doc/api/_build/html/_static/: custom.css
