[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sparkly"
version = "0.1.0"
dynamic = ["dependencies"]

requires-python = ">= 3.12"

authors = [
	{name = "Derek Paulsen", email = "derekpaulsensi@gmail.com"},
	{name = "Dev Ahluwalia", email = "dahluwalia@wisc.edu"}
]

description = "Sparkly is a TF/IDF top-k blocking for entity matching system built on top of Apache Spark and PyLucene."

readme = "README.md"
license = {file = "LICENSE"}

keywords = ["entity matching", "entity resolution", "matching", "Spark", "Lucene", "PyLucene", "distributed"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

Homepage = "https://github.com/anhaidgroup/sparkly"
Repository = "https://github.com/anhaidgroup/sparkly.git"
Issues = "https://github.com/anhaidgroup/sparkly/issues"

[project.optional-dependencies]
docs = ["numpydoc>=1.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["sparkly"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
